<resources>
    <string name="app_name">MultipleActivitiesAndLayout</string>
    <string name="home">Home</string>
    <string name="using_linear_layout">Using Linear Layout</string>

    <string name="relativeviewico">RelativeViewico</string>
    <string name="rldes">Relative layout utilizes relationship between each other and parents to define views position.</string>
    <string name="relative_layoutbtn">Relative Layout</string>

    <string name="constraintviewico">ConstraintViewico</string>
    <string name="cldes">Constraint layout needs atleast one horizontal and one vertical constraint to define the views within it.</string>
    <string name="constraint_layoutbtn">Constraint Layout</string>

    <string name="gridviewico">GridViewico</string>
    <string name="gldes">Grid layout arranges the views in distributed rows and columns manner.</string>
    <string name="grid_layoutbtn">Grid Layout</string>

    <string name="using_relative_layout">This is a Relative Layout page.</string>
    <string name="text_1">Text #1</string>
    <string name="text_2">Text #2</string>
    <string name="text_3">Text #3</string>
    <string name="text_4">Text #4</string>
    <string name="text_5">Enter Your Name: </string>
    <string name="back_to_home">Back to Home</string>
    <string name="andades">andapic</string>
    <string name="andbdes">andbpic</string>
    <string name="andcdes">andcpic</string>
    <string name="andmaindes">andmainpic</string>
    <string name="homecns">Home</string>
    <string name="cbtn">C</string>
    <string name="dvbtn">÷</string>
    <string name="multbtn">×</string>
    <string name="minbtn">−</string>
    <string name="addbtn">+</string>
    <string name="ninebtn">9</string>
    <string name="eightbtn">8</string>
    <string name="sevenbtn">7</string>
    <string name="fivebtn">5</string>
    <string name="sixbtn">6</string>
    <string name="fourbtn">4</string>
    <string name="onebtn">1</string>
    <string name="twobtn">2</string>
    <string name="threebtn">3</string>
    <string name="dotbtn">.</string>
    <string name="zerobtn">0</string>
    <string name="homebtn">Home</string>
    <string name="eqbtn">=</string>

</resources>