<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GridActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginTop="180dp"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/homebtn"
            android:layout_width="173dp"
            android:layout_height="75dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:fontFamily="sans-serif"
            android:onClick="GRDBackClicked"
            android:paddingTop="10dp"
            android:text="@string/homebtn"
            android:textColor="#E69696"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/cbtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="0"
            android:layout_column="2"
            android:fontFamily="sans-serif"
            android:text="@string/cbtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/dvbtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="0"
            android:layout_column="3"
            android:fontFamily="sans-serif"
            android:text="@string/dvbtn"
            android:textColor="#576BD8"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/sevenbtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="1"
            android:layout_column="0"
            android:fontFamily="sans-serif"
            android:text="@string/sevenbtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/eightbtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="1"
            android:layout_column="1"
            android:fontFamily="sans-serif"
            android:text="@string/eightbtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/ninebtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="1"
            android:layout_column="2"
            android:fontFamily="sans-serif"
            android:text="@string/ninebtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/multbtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="1"
            android:layout_column="3"
            android:fontFamily="sans-serif"
            android:text="@string/multbtn"
            android:textColor="#576BD8"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/fourbtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="2"
            android:layout_column="0"
            android:fontFamily="sans-serif"
            android:text="@string/fourbtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/fivebtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="2"
            android:layout_column="1"
            android:fontFamily="sans-serif"
            android:text="@string/fivebtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/sixbtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="2"
            android:layout_column="2"
            android:fontFamily="sans-serif"
            android:text="@string/sixbtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/minbtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="2"
            android:layout_column="3"
            android:fontFamily="sans-serif"
            android:text="@string/minbtn"
            android:textColor="#576BD8"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/onebtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="3"
            android:layout_column="0"
            android:fontFamily="sans-serif"
            android:text="@string/onebtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/twobtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="3"
            android:layout_column="1"
            android:fontFamily="sans-serif"
            android:text="@string/twobtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/threebtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="3"
            android:layout_column="2"
            android:fontFamily="sans-serif"
            android:text="@string/threebtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/addbtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="3"
            android:layout_column="3"
            android:fontFamily="sans-serif"
            android:text="@string/addbtn"
            android:textColor="#576BD8"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/zerobtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="4"
            android:layout_column="0"
            android:fontFamily="sans-serif"
            android:text="@string/zerobtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/dotbtn"
            android:layout_width="82dp"
            android:layout_height="75dp"
            android:layout_row="4"
            android:layout_column="1"
            android:fontFamily="sans-serif"
            android:text="@string/dotbtn"
            android:textColor="#000000"
            android:textSize="35sp"
            app:backgroundTint="#E5E7ED"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/eqbtn"
            android:layout_width="173dp"
            android:layout_height="75dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:fontFamily="sans-serif"
            android:text="@string/eqbtn"
            android:textColor="#E5E7ED"
            android:textSize="35sp"
            app:backgroundTint="#576BD8"
            app:cornerRadius="30dp" />
    </GridLayout>

    <TextView
        android:id="@+id/ans"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text=""
        android:textSize="60sp"
        android:gravity="end"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/inpshow"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text=""
        android:textSize="25sp"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/ans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>