<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/home"
        android:textAllCaps="true"
        android:textColor="#3F51B5"
        android:textSize="42sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/using_linear_layout"
        android:textColor="#3F51B5"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/design_default_color_primary_dark"
        android:paddingTop="2dp"
        android:paddingBottom="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewrl"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/relativeviewico"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/rlim" />

        <TextView
            android:id="@+id/textViewrl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="30dp"
            android:text="@string/rldes"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:onClick="RelativeLayoutClicked"
        android:text="@string/relative_layoutbtn"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3F51B5"
        app:cornerRadius="5dp" />
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_primary_dark"
        android:paddingTop="2dp"
        android:paddingBottom="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewcl"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/constraintviewico"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/clim" />

        <TextView
            android:id="@+id/textViewcl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="28dp"
            android:text="@string/cldes"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttoncl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:onClick="ConstraintLayoutClicked"
        android:text="@string/constraint_layoutbtn"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3F51B5"
        app:cornerRadius="5dp" />
    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_primary_dark"
        android:paddingTop="2dp"
        android:paddingBottom="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewgl"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/gridviewico"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/glim" />

        <TextView
            android:id="@+id/textViewgl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="28dp"
            android:text="@string/gldes"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttongl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/grid_layoutbtn"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3F51B5"
        app:cornerRadius="5dp" />
    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_primary_dark"
        android:paddingTop="2dp"
        android:paddingBottom="2dp" />


</LinearLayout>