<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintActivity">

    <ImageView
        android:id="@+id/anda"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/andades"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        app:srcCompat="@drawable/aa" />

    <ImageView
        android:id="@+id/andb"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/andbdes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        app:srcCompat="@drawable/ab" />

    <ImageView
        android:id="@+id/andc"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/andcdes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        app:srcCompat="@drawable/ac" />

    <ImageView
        android:id="@+id/andmain"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/andmaindes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/andb"
        app:layout_constraintVertical_bias="0.23"
        app:srcCompat="@drawable/ad" />

    <Button
        android:id="@+id/btnhomecns"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="CNSBackClicked"
        android:text="@string/homecns"
        app:backgroundTint="#9FA1A5"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/andmain"
        app:layout_constraintVertical_bias="0.341" />
</androidx.constraintlayout.widget.ConstraintLayout>